tests/errors/disable-binary-then-binary.ssv
#! DISABLE_BINARY_NUMBERS

val:int
0b1010
